# Multi-agent-controller

./: README.md
Distributed Controller/: CMakeLists.txt  package.xml
Distributed Controller/bags/: README.md
Distributed Controller/config/: coop_frames (copy).yaml  coop_frames.yaml  coop_uri.yaml
Distributed Controller/include/: CommSocket.hpp  coop.hpp
Distributed Controller/src/: coop.cpp  testTF.cpp
autogenerate_proj/: cloneFromGit.sh  createCWS.sh  setUpProj.sh
crazyflie_controller/: CMakeLists.txt  CMakeLists.txt~  readme.txt
crazyflie_controller/config/: crazyflie2.yaml  crazyflie2_100.yaml  crazyflie2_110.yaml  crazyflie2_120.yaml
crazyflie_controller/launch/: crazyflie2_100.launch  crazyflie2_110.launch  crazyflie2_120.launch  crazyflie2_90.launch
crazyflie_controller/src/: controller (copy).cpp  controller.cpp
crazyflie_coop/include/: coop.hpp
crazyflie_coop/launch/: crazyflie_coop.launch
crazyflie_coop/src/: CommSocket.cpp  coop_w_trust.cpp  crazyflie_coop.cpp
crazyflie_demo/launch/: Testing.launch  Testing.launch~  hover_vicon.launch  hover_vicon2.launch  hover_vicon_new_cameras.launch  multi_hover_vicon.launch  multi_hover_vicon2.launch  test.launch  test2cf.launch  test3cf.launch
crazyflie_demo/scripts/: controllerKB.py  master_controller.py
my_tools/config/: ConfigFile.txt  ConfigFile.txt~
my_tools/scripts/: .sc.py.swp  autoGenLaunchFile.py  autoGenLaunchFileBare.py
teleop_twist_keyboard/: teleop_twist_keyboard.py
